--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "devDependencies": {
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.4",
+        "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@material-tailwind/html": "^2.2.2",
-        "boxicons": "^2.1.4",
-        "croppr": "^2.3.1",
-        "htmx.org": "^1.9.10"
+        "bootstrap-icons": "^1.11.3",
+        "croppr": "^2.3.1"
     }
 }
